--- a/CoWorker.API/appsettings.json
+++ b/CoWorker.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CoWorker.API-D36439CE-4CB1-4211-B4EE-EBB2FE76756D;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CoWorker.API-D36439CE-4CB1-4211-B4EE-EBB2FE76756D;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AzureConnection" : "Server=tcp:zhopaslona.database.windows.net,1433;Initial Catalog=KarenObosavKoran;Persist Security Info=False;User ID=user;Password=Html325698!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
